--- a/module/Application/view/application/artist/index.phtml
+++ b/module/Application/view/application/artist/index.phtml
@@ -1,20 +1,21 @@
 <h1>Artists</h1>
-<table class="table table-hover table-condensed">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody>
-  <?php foreach($this->artists['_embedded']['artist'] as $artist) { ?>
-    <tr>
-      <td><a href="<?= $artist['_links']['self']['href']; ?>"><?= $artist['id']; ?></a></td>
-      <td><?= $artist['name']; ?></td>
-    </tr>
-  <?php } ?>
-  </tbody>
-</table>
-<?php
-var_dump($this->artists['_embedded']['artist'][0]);
-?>
+<!--<table class="table table-hover table-condensed">-->
+<!--	<thead>-->
+<!--	<tr>-->
+<!--		<th>ID</th>-->
+<!--		<th>Name</th>-->
+<!--	</tr>-->
+<!--	</thead>-->
+<!--	<tbody>-->
+<!--	--><?php //foreach ($this->artists as $artist) { ?>
+<!--		<tr>-->
+<!--			<td><a href="--><?//= $artist['_links']['self']['href']; ?><!--">--><?//= $artist['id']; ?><!--</a></td>-->
+<!--			<td>--><?//= $artist['name']; ?><!--</td>-->
+<!--		</tr>-->
+<!--	--><?php //} ?>
+<!--	</tbody>-->
+<!--</table>-->
+<!--<a href="--><?php //echo $this->artists['_links']['next']['href']; ?><!--">Next</a>-->
+<!--<br>-->
+<!--<a href="/artist?page=2">Next</a>-->
+<pre><?= json_encode($this->artists, JSON_PRETTY_PRINT); ?></pre>
