--- a/module/Application/view/application/artist/index.phtml
+++ b/module/Application/view/application/artist/index.phtml
@@ -18,4 +18,19 @@
 <!--<a href="--><?php //echo $this->artists['_links']['next']['href']; ?><!--">Next</a>-->
 <!--<br>-->
 <!--<a href="/artist?page=2">Next</a>-->
+
+<table class="table">
+	<tr>
+		<th>ID</th>
+		<th>Name</th>
+	</tr>
+	<?php foreach ($this->paginator as $artist) { ?>
+		<tr>
+			<td><?php echo $this->escapeHtml($artist['id']);?></td>
+			<td><?php echo $this->escapeHtml($artist['name']);?></td>
+		</tr>
+	<?php } ?>
+</table>
+<?php echo $this->apigilityPaginationControl($this->paginator, 'partial/paginator/apigility.phtml'); ?>
+
 <pre><?= json_encode($this->artists, JSON_PRETTY_PRINT); ?></pre>
