--- a/module/Application/view/partial/paginator/apigility.phtml
+++ b/module/Application/view/partial/paginator/apigility.phtml
@@ -1,26 +1,46 @@
-<?php if ($this->pageCount) { ?>
-	<div class="paginationControl">
-		<!-- Previous page link -->
-		<?php if (isset($this->previous)) { ?>
-			<a href="<?php echo $this->url($this->route, array('page' => $this->previous)); ?>">< Previous</a> |
+<?php if ($this->pages['pageCount']) { ?>
+	<div class="pagination-control">
+
+		<!-- First page link -->
+		<?php if ($this->pages['current'] == 1) { ?>
+			<span class="disabled">First</span> |
 		<?php } else { ?>
-			<span class="disabled">< Previous</span> |
+			<?php $query['page'] = 1; ?>
+			<a href="<?= $this->url($this->route['name'], $query, ['query' => $query]); ?>">First</a> |
+		<?php } ?>
+
+		<!-- Previous page link -->
+		<?php if (isset($this->pages['previous'])) { ?>
+			<?php $query['page'] = $this->pages['previous']; ?>
+			<a href="<?= $this->url($this->route['name'], $query, ['query' => $query]); ?>">Previous</a> |
+		<?php } else { ?>
+			<span class="disabled">Previous</span> |
 		<?php } ?>
 
 		<!-- Numbered page links -->
-		<?php foreach ($this->pagesInRange as $page) { ?>
-			<?php if ($page != $this->current) { ?>
-				<a href="<?php echo $this->url($this->route, ['page' => $page]); ?>"><?php echo $page; ?></a> |
+		<?php foreach ($this->pages['pagesInRange'] as $page) { ?>
+			<?php if ($page == $this->pages['current']) { ?>
+				<?= $page; ?> |
 			<?php } else { ?>
-				<?php echo $page; ?> |
+				<?php $query['page'] = $page; ?>
+				<a href="<?= $this->url($this->route['name'], $query, ['query' => $query]); ?>"><?= $page; ?></a> |
 			<?php } ?>
 		<?php } ?>
 
 		<!-- Next page link -->
-		<?php if (isset($this->next)) { ?>
-			<a href="<?php echo $this->url($this->route, array('page' => $this->next)); ?>">Next ></a>
+		<?php if (isset($this->pages['next'])) { ?>
+			<?php $query['page'] = $this->pages['next']; ?>
+			<a href="<?= $this->url($this->route['name'], $query, ['query' => $query]); ?>">Next</a> |
 		<?php } else { ?>
-			<span class="disabled">Next ></span>
+			<span class="disabled">Next</span> |
+		<?php } ?>
+
+		<!-- Last page link -->
+		<?php if ($this->pages['current'] == $this->pages['last']) { ?>
+			<span class="disabled">Last</span>
+		<?php } else { ?>
+			<?php $query['page'] = $this->pages['last']; ?>
+			<a href="<?= $this->url($this->route['name'], $query, ['query' => $query]); ?>">Last</a>
 		<?php } ?>
 	</div>
 <?php } ?>
