--- a/module/Application/view/application/artist/index.phtml
+++ b/module/Application/view/application/artist/index.phtml
@@ -23,17 +23,14 @@
 	<tr>
 		<th>ID</th>
 		<th>
-			<a href="/artist?page=<?= $this->paginator->getCurrentPageNumber(); ?>&sort=name">Name</a>
+			<a href="/artist?page=<?= $this->artistCollection->getCurrentPageNumber(); ?>&sort=name">Name</a>
 		</th>
 	</tr>
-	<?php foreach ($this->paginator as $artist) { ?>
+	<?php foreach ($this->artistCollection as $artist) { ?>
 		<tr>
 			<td><?php echo $this->escapeHtml($artist['id']);?></td>
 			<td><?php echo $this->escapeHtml($artist['name']);?></td>
 		</tr>
 	<?php } ?>
 </table>
-<?php echo $this->apigilityPaginationControl($this->paginator, 'partial/paginator/apigility.phtml', [
-	'name' => 'artist/default',
-	'params' => []
-]); ?>
+<?php echo $this->PaginationControl($this->artistCollection, 'partial/paginator/apigility.phtml', 'artist/default'); ?>
