Request object out of HTTP client.

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -5,5 +5,5 @@
 
 <ul>
 	<li><a href="/artist">Artists</a></li>
-	<li><a href="/application/index/artist">Artist 1</a></li>
+	<li><a href="/artist/get/1">Artist 1</a></li>
 </ul>
