--- a/module/Application/view/application/artist/index.phtml
+++ b/module/Application/view/application/artist/index.phtml
@@ -1,29 +1,17 @@
 <h1>Artists</h1>
-<!--<table class="table table-hover table-condensed">-->
-<!--	<thead>-->
-<!--	<tr>-->
-<!--		<th>ID</th>-->
-<!--		<th>Name</th>-->
-<!--	</tr>-->
-<!--	</thead>-->
-<!--	<tbody>-->
-<!--	--><?php //foreach ($this->artists as $artist) { ?>
-<!--		<tr>-->
-<!--			<td><a href="--><?//= $artist['_links']['self']['href']; ?><!--">--><?//= $artist['id']; ?><!--</a></td>-->
-<!--			<td>--><?//= $artist['name']; ?><!--</td>-->
-<!--		</tr>-->
-<!--	--><?php //} ?>
-<!--	</tbody>-->
-<!--</table>-->
-<!--<a href="--><?php //echo $this->artists['_links']['next']['href']; ?><!--">Next</a>-->
-<!--<br>-->
-<!--<a href="/artist?page=2">Next</a>-->
-
 <table class="table">
 	<tr>
 		<th>ID</th>
 		<th>
-			<a href="/artist?page=<?= $this->artistCollection->getCurrentPageNumber(); ?>&sort=name">Name</a>
+			<?php
+			// TODO move to controller
+			$order = empty($this->query['order']) ? 'name' : $this->query['order'];
+//			else if ($this->query['order'] !== 'name') {
+//				$order
+//			}
+//			$order = (!empty($this->query['order']) && $this->query['order'] !== 'name') ? 'name' : '-name'
+			?>
+			<a href="/artist?page=<?= $this->artistCollection->getCurrentPageNumber(); ?>&order=<?= $order ?>">Name</a>
 		</th>
 	</tr>
 	<?php foreach ($this->artistCollection as $artist) { ?>
